--- a/views/home_admin.ejs
+++ b/views/home_admin.ejs
@@ -36,7 +36,7 @@
             <th>shortId</th>
             <th>Total Clicks</th>
             <th>CreatedBy</th>
-            <th>CreatedBy(id)</th>
+            <th>CreatedBy(email)</th>
         </thead>
         <tbody>
             <% urls.forEach((url,index) => {%>
@@ -51,7 +51,7 @@
                    <% }
                     
                     %>
-                    <td><%=url.createdBy %></td>
+                    <td><%=url.createdBy_email %></td>
                 </tr>
                  
             <% }); %>
