Add sign-out functionality with enhanced security

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,5 +58,8 @@
         </tbody>
     </table>
 <%  }%>
+<hr>
+ <button id="signout-btn">Sign Out</button>
+ <script src="/js/script.js"></script>
 </body>
 </html>
