--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN</title>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <form action="/user/login" method="post">
-        <label >Enter EMAIL:</label>
-        <input type="text" required name="email" >
-        <label >Enter PASSWORD:</label>
-        <input type="text" required name="password" id>
-
-        <button type="submit">LOGIN</button>
-    </form>
-    
+    <div class="login-container">
+        <div class="login-box">
+            <h2>Login</h2>
+            <form action="/user/login" method="POST">
+                <div class="input-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                </div>
+                <button type="submit" class="login-btn">Login</button>
+                <div class="extra-options">
+                    <a href="/forgot-password">Forgot Password?</a>
+                    <a href="/signup">Sign Up</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
