--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,10 +23,10 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="login-btn">Login</button>
+                <button type="submit" class="login-btn">Sign Up</button>
                 <div class="extra-options">
                     <a href="/forgot-password">Forgot Password?</a>
-                    <a href="/signup">Sign Up</a>
+                    <a href="/login">Login</a>
                 </div>
             </form>
         </div>
