--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,7 @@
     <div class="login-container">
         <div class="login-box">
             <h2>SIGNUP</h2>
-            <form action="/user/login" method="POST">
+            <form action="/user" method="POST">
                 <div class="input-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Enter your name" required>
@@ -25,7 +25,7 @@
                 </div>
                 <button type="submit" class="login-btn">Sign Up</button>
                 <div class="extra-options">
-                    <a href="/forgot-password">Forgot Password?</a>
+                    
                     <a href="/login">Login</a>
                 </div>
             </form>
