--- a/views/admin_homepage.ejs
+++ b/views/admin_homepage.ejs
@@ -68,7 +68,8 @@
             </form>
         </div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" ></script>
+    <script src="/js/script1.js"></script>
 </body>
 
 </html>
