--- a/views/admin_verify.ejs
+++ b/views/admin_verify.ejs
@@ -28,6 +28,7 @@
                     </form>
                 </div>
             </div>
+            <script src="/js/script1.js"></script>
         </body>
         </html>
         
