--- a/views/invalid_passkey.ejs
+++ b/views/invalid_passkey.ejs
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Pass  key is Incorrect.You are not allowed to enter this page.</h1>
+    <script src="/js/script1.js"></script>
 </body>
 </html>
