--- a/views/normal_homepage.ejs
+++ b/views/normal_homepage.ejs
@@ -66,7 +66,8 @@
            
         </div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" ></script>
+    <script src="/js/script1.js"></script>
 </body>
 
 </html>
