Enhanced Signup Security & Fixed Admin Authentication Issues

--- a/views/admin_verify.ejs
+++ b/views/admin_verify.ejs
@@ -20,8 +20,8 @@
                             <input type="password" id="password" name="password" placeholder="Enter your password" required>
                         </div>
                         <div class="input-group">
-                            <label for="password">Password</label>
-                            <input type="password" id="password" name="passkey" placeholder="Enter your passkey" required>
+                            <label for="passkey">Passkey</label>
+                            <input type="password" id="passkey" name="passkey" placeholder="Enter your passkey" required>
                         </div>
                         <button type="submit" class="login-btn">Submit</button>
                         
