--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -22,6 +22,9 @@
                 <div class="input-group">
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                    <br>
+                    <br>
+                    <span id="passwordError" style="color: red;"></span>
                 </div>
                 <button type="submit" class="login-btn">Sign Up</button>
                 <div class="extra-options">
@@ -32,5 +35,6 @@
         </div>
     </div>
     <script src="/js/script1.js"></script>
+    <script src="/js/script2.js"></script>
 </body>
 </html>
